# pyspark-tdd-scaffold

./: README.md  pyproject.toml
deltalake/bronze/: play.py
deltalake/silver/: play.py
integration/: conftest.py  integration_tests.md
tests/: README.md  conftest.py  unit_tests.md
tests/bronze/: play_test.py
tests/pipeline/: play_integration_test.py
tests/silver/: play_test.py
